<resources>
    <string name="app_name">SI-ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="email">Email</string>
    <string name="Required" />
    <string name="required">Required</string>
    <string name="qualifications">Qualifications</string>
    <string name="mentor_registration">Mentor Registration</string>
    <string name="qualification">Qualifications</string>
    <string name="qualification1">Qualification1</string>
    <string name="qualification2">Qualification2</string>
    <string name="qualification3">Qualification3</string>
    <string name="qualification4">Qualification4</string>
    <string name="other">Other</string>
    <string name="available_feasible_time_hours">Available/Feasible Time Hours</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="next">Next</string>
    <string name="select_date">Select Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="student_registration">Student Registration</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="mentor">Mentor</string>
    <string name="student">Student</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_word">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_profile_fragment">User Profile Fragment</string>
    <string name="name">Name</string>
    <string name="emails">Email</string>
    <string name="email_id">Email Id</string>
    <string name="_9999999999">9999999999</string>
    <string name="phone">Phone</string>
</resources>