<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="15dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/default_profile_pic"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/teal_200"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"

        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emails"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/profile_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:layout_marginStart="25dp"
            android:textSize="18sp"
            android:textColor="#B4B4B4"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D4D4D4"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_contact"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/profile_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9999999999"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            android:textColor="#B4B4B4"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#D4D4D4"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        />








<!--    <TextView-->
<!--        android:id="@+id/profile_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_below="@+id/profile_image"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:text=""/>-->



<!--    <TextView-->
<!--        android:id="@+id/t1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Name"-->
<!--        android:layout_centerInParent="true"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/t2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Email"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_below="@+id/t1"-->
<!--        android:layout_centerInParent="true"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/t3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Contact"-->
<!--        android:layout_below="@id/t2"-->
<!--        android:layout_centerInParent="true"-->
<!--        />-->

</LinearLayout>