<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentSwitch">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/student_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_registration"
                android:textSize="30sp"
                android:layout_margin="20dp"
                android:gravity="center"

                />

            <TextView
                android:id="@+id/student_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_heading"
                android:text="@string/gender"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <RadioGroup
                android:id="@+id/s_gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_gender"
                android:layout_marginStart="15dp"
                >

                <RadioButton
                    android:id="@+id/s_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="18sp"

                    />
                <RadioButton
                    android:id="@+id/s_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="18sp"

                    />
                <RadioButton
                    android:id="@+id/s_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="18sp"

                    />
            </RadioGroup>



<!--            <EditText-->
<!--                android:id="@+id/other_q"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_q3"-->
<!--                android:layout_marginStart="15sp"-->
<!--                android:layout_marginEnd="15sp"-->
<!--                android:autofillHints=""-->
<!--                android:hint="@string/other"-->
<!--                android:inputType="text"-->
<!--                android:minHeight="48dp" />-->


            <TextView
                android:id="@+id/student_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/s_gender_group"
                android:text="@string/date_of_birth"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/student_dob"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/select_date"

                />

            <Button
                android:id="@+id/next_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="93dp"
                android:layout_height="48dp"
                android:layout_below="@+id/calendar"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginBottom="15sp"
                android:text="@string/next" />

<!--            <CheckBox-->
<!--                android:id="@+id/m_t1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/mentor_time"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="Morning (7:00 - 12:00)"-->
<!--                android:textSize="20sp"-->

<!--                />-->
<!--            <CheckBox-->
<!--                android:id="@+id/m_t2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_t1"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="Afternoon (12:00 - 16:00)"-->
<!--                android:textSize="20sp"-->

<!--                />-->
<!--            <CheckBox-->
<!--                android:id="@+id/m_t3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_t2"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="Evening (16:00 - 22:00)"-->
<!--                android:textSize="20sp"-->

<!--                />-->
<!--            <CheckBox-->
<!--                android:id="@+id/m_t4"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_t3"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="24/7"-->
<!--                android:textSize="20sp"-->

<!--                />-->

<!--            <EditText-->
<!--                android:id="@+id/other_t"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_t4"-->
<!--                android:layout_marginStart="15sp"-->
<!--                android:layout_marginEnd="15sp"-->
<!--                android:autofillHints=""-->
<!--                android:hint="@string/other"-->
<!--                android:inputType="text"-->
<!--                android:minHeight="48dp" />-->

<!--            <TextView-->
<!--                android:id="@+id/mentor_interests"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/other_t"-->
<!--                android:text="Interested Areas of Queries"-->
<!--                android:textSize="20sp"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                />-->

<!--            <CheckBox-->
<!--                android:id="@+id/m_i1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/mentor_interests"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="Area1"-->
<!--                android:textSize="20sp"-->

<!--                />-->
<!--            <CheckBox-->
<!--                android:id="@+id/m_i2"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_i1"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:text="Area2"-->
<!--                android:textSize="20sp"-->

<!--                />-->

<!--            <CheckBox-->
<!--                android:id="@+id/m_i3"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_i2"-->
<!--                android:layout_marginStart="15dp"-->
<!--                android:minHeight="32dp"-->
<!--                android:text="Area3"-->

<!--                android:textSize="20sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/other_i"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@+id/m_i3"-->
<!--                android:layout_marginStart="15sp"-->
<!--                android:layout_marginEnd="15sp"-->
<!--                android:hint="@string/other"-->
<!--                android:inputType="text"-->
<!--                android:autofillHints=""-->
<!--                />-->




<!--            <Button-->
<!--                android:id="@+id/next_btn"-->
<!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--                android:layout_width="93dp"-->
<!--                android:layout_height="45dp"-->
<!--                android:text="Next"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_margin="15sp"-->
<!--                android:layout_below="@id/other_i"-->
<!--                />-->


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>